--- a/src/main/webapp/css/spheres.css
+++ b/src/main/webapp/css/spheres.css
@@ -15,6 +15,11 @@ li {
 	margin-top: 10px;
 
 }
+ul {
+    padding-top: 2px;
+    margin: 10px; /* Убираем отступы у списка */
+   }
+
 
 .h5 a, .h5 li {
 
