--- a/src/main/webapp/css/timer.css
+++ b/src/main/webapp/css/timer.css
@@ -119,11 +119,18 @@ li {
   display: none;
   text-align: center;
 }
-
 p {
-  text-align: center;
-  font-size: 60px;
-  margin-top:0px;
+	text-align: center;
+	font-size: 60px;
+	margin-top: 0px;
+}
+h4{
+	color: #0fa3ba;
+	 align: center;
+}
+h6{
+	color: #0fa3ba;
+	 align: center;
 }
 
 
