--- a/src/main/resources/templates/subthemes.html
+++ b/src/main/resources/templates/subthemes.html
@@ -46,7 +46,7 @@
 
 				<div class="card-body">
 					<div class="text-center">
-						<a class="h3 name card-title" th:href="@{'/debateAutoConnect'}"
+						<a class="h3 name card-title" th:href="@{'/debateAutoConnect/'+${themes.id}}"
 							th:text="${themes.name}"></a>
 					</div>
 					<div class="positions h4">
