--- a/src/main/resources/templates/themes.html
+++ b/src/main/resources/templates/themes.html
@@ -47,7 +47,7 @@
 
 				<div class="card-body">
 					<div class="text-center">
-						<a class="h3 name card-title" th:href="@{'/autoConnect'}"
+						<a class="h3 name card-title" th:href="@{'/debateAutoConnect/'+${themes.id}}"
 							th:text="${themes.name}"></a>
 					</div>
 					<div class="positions h4">
