--- a/src/main/resources/templates/createTheme.html
+++ b/src/main/resources/templates/createTheme.html
@@ -31,14 +31,28 @@
 						for="backgroundImage">Выберите файл</label>
 				</div>
 			</div>
-			<div class="form-group">
+
+<div class="form-group">
+			<div class="form-row">
+				<div class="col-6 col-sm-6 form-group">
+					<label>Левая позиция</label> <input type="text" class="form-control"
+						  id="firstPosition" name="firstPosition">
+				</div>
+				<div class="col-6 col-sm-6 form-group">
+					<label>Правая позиция</label> <input type="text" class="form-control" 
+					id="secondPosition" name="secondPosition">
+				</div>
+			</div></div>
+
+
+	<!-- 		
 				<label for="name">Левая позиция</label> <input type="text"
 					class="form-control" id="firstPosition" name="firstPosition">
 			</div>
 			<div class="form-group">
 				<label for="name">Правая позиция</label> <input type="text"
-					class="form-control" id="secondPosition" name="secondPosition">
-			</div>
+					class="form-control" id="secondPosition" name="secondPosition"> -->
+			
 
 
 
