--- a/src/main/resources/templates/createTheme.html
+++ b/src/main/resources/templates/createTheme.html
@@ -12,10 +12,10 @@
 		</div>
 		<form class="mt-3" th:action="@{/themes/createTheme}"
 			th:object="${Theme}" method="post">
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="name">Название Темы</label> <input type="text"
 					class="form-control" id="name" name="name">
-			</div>
+			</div> -->
 			<label for="spheres">Подсфера</label> <select class="form-control"
 				id="spheres" name="spheres">
 				<option th:if="${sphere.id > 99}" th:each="sphere : ${spheres}"
