--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -2,12 +2,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+
 <meta charset="UTF-8">
 <title>Создать дебаты</title>
 </head>
 <body>
-	<div class="container" th:fragment="content"
-		th:with="choosenSphere=${spheres[0]}">
+	<div class="container" th:fragment="content">
 		<div class="text-center" th:with="sphereId=${spheresId}">
 			<h1>Создание новых дебатов</h1>
 		</div>
@@ -18,7 +37,7 @@
 				<label for="name">Название дебатов</label> <input type="text"
 					class="form-control" id="name" name="name">
 			</div> -->
-<!-- 
+			<!-- 
 			<div class="form-group">
 				<label for="spheres">Сфера</label> <select class="form-control"
 					id="spheres" name="spheres">
@@ -47,14 +66,20 @@
 				</select>
 			</div>
 
-			<div class="form-group">
-				<label for="image">Картинка дебатов</label>
-				<div class="custom-file">
-					<input type="file" class="custom-file-input" id="backgroundImage"
-						name="backgroundImage"> <label class="custom-file-label"
-						for="customFile">Выберите файл</label>
-				</div>
+
+			<div class="form-check form-check-inline">
+				<input class="form-check-input" type="radio"
+					name="userPosition" id="inlineRadio1" value="position1">
+				<label class="form-check-label" for="inlineRadio1">Левая
+					позиция          </label> <input class="form-check-input" type="radio"
+					name="userPosition" id="inlineRadio2" value="position2">
+				<label class="form-check-label" for="inlineRadio2">Правая
+					позиция</label>
 			</div>
+
+
+
+			<div id="image-holder"></div>
 			<div class="form-group">
 				<label for="name">Длительность дебатов (в минутах)</label> <input
 					type="range" name="generalTime" id="generalTime" min="5" step="5"
@@ -63,10 +88,9 @@
 				<output name="generalTimeOutput" id="generalTimeOutput">40</output>
 			</div>
 			<div class="form-group">
-				<label for="name">Таймаут (в минутах)</label>
-				<input type="range" name="timeoutTime" id="timeoutTime" min="1"
-					step="1" max="30" value="2"
-					oninput="timeoutTimeOutput.value = timeoutTime.value" />
+				<label for="name">Таймаут (в минутах)</label> <input type="range"
+					name="timeoutTime" id="timeoutTime" min="1" step="1" max="30"
+					value="2" oninput="timeoutTimeOutput.value = timeoutTime.value" />
 				<output name="timeoutTimeOutput" id="timeoutTimeOutput">2</output>
 			</div>
 			<div class="form-group">
@@ -101,11 +125,6 @@
 
 			<script type="text/javascript">
 				$('.selectpicker').selectpicker();
-
-	
-				$('#something').click(function() {
-					location.reload();
-				});
 			</script>
 		</form>
 	</div>
