--- a/src/main/webapp/css/themes.css
+++ b/src/main/webapp/css/themes.css
@@ -40,3 +40,16 @@ img {
 	margin: 0 15px;
 	
 }
+
+a {
+	
+	text-align: center;
+	color: #0fa3ba;
+	
+}
+div.config {
+	
+	text-align: center;
+	color: #0fa3ba;
+	
+}
