--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -19,25 +19,33 @@
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
 </head>
-<body>
-	<div class="main-container">
-		<div class="main-form-container alert alert-primary">
-			<h3>Registration</h3>
+<body class="container d-flex justify-content-center h-100 align-items-center" >
+<div class="card" style="max-height:500px; width:400px">
+<div class="card-header">
+			<h3>Регистрация</h3>
 			<form th:action="@{/registration}" method="post">
 				<div class="form-group">
-					<label for="email">Email address</label> <input type="email"
+					<label for="email">Email</label> <input type="email"
 						name="email" id="email" required autofocus class="form-control" />
 				</div>
-				<label for="email">Login</label>
+				<label for="email">Логин</label>
 				<div class="input-group mb-3">
 					<input type="text" class="form-control" placeholder="Username"
 						aria-label="Username" name="login" aria-describedby="basic-addon1">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Password</label> <input
+					<label for="exampleInputPassword1">Пароль</label> <input
 						type="password" class="form-control" name="password"
 						id="exampleInputPassword1" placeholder="Password">
 				</div>
+				<div class="form-group">
+				<label for="image">Картинка темы</label>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="userImage"
+						name="userImage"> <label class="custom-file-label"
+						for="userImage">Выберите файл</label>
+				</div>
+			</div>
 				<div class="btn-group" role="group" aria-label="Basic example">
 					<button type="submit" class="btn btn-primary">Submit</button>
 					<a class="btn btn-primary" href="/login" role="button">Log in</a>
