--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 				<input type="text" class="form-control" id="name" name="username">
 			</div>
 			<div class="form-group">
-				<label for="password">Password</label>
+				<label for="password">Пароль</label>
 				<input type="password" class="form-control" id="password" name="password">
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
