--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -66,7 +66,7 @@
 
 					<div id="navbar" class="dropdown-menu dropdown-menu-right ">
 						<a class="dropdown-item" href="#"> <img class="rounded-circle"
-							th:src="@{${'../images/users/' + image}}" alt="Person" width="60"
+							th:src="@{${'~/images/users/' + image}}" alt="Person" width="60"
 							height="60">
 						</a> <span class="dropdown-item-text" th:inline="text">[[${#httpServletRequest.remoteUser}]]</span>
 
