1) сделал логику голосования в VoteController

--- a/src/main/resources/templates/fragments/debatersChat.html
+++ b/src/main/resources/templates/fragments/debatersChat.html
@@ -76,9 +76,9 @@
 
 				<div class="table-of-votes">
 
-					<div class="index for-first h3">45</div>
-					<div class="index for-second h3">23</div>
-
+					<div id="firstPosition">0</div>
+					<div id="secondPosition">0</div>			
+				
 				</div>
 
 			</div>
