--- a/src/main/resources/templates/fragments/debateSpectatorsChat.html
+++ b/src/main/resources/templates/fragments/debateSpectatorsChat.html
@@ -38,7 +38,7 @@
 
 				<div class="spectator-image">
 						<a href="#">
-							<img src="/images/img_avatar.jpg" class="img-thumbnail commentator" alt="Spectator">
+							<img src="/images/users/7.jpg" class="img-thumbnail commentator" alt="Spectator">
 						</a>
 				</div>
 
@@ -54,7 +54,7 @@
 
 				<div class="spectator-image">
 						<a href="#">
-							<img src="/images/img_avatar.png" class="img-thumbnail commentator" alt="Spectator">
+							<img src="/images/users/2.jpg" class="img-thumbnail commentator" alt="Spectator">
 						</a>
 				</div>
 
@@ -70,7 +70,7 @@
 
 				<div class="spectator-image">
 						<a href="#">
-							<img src="/images/nizkij flex.jpg" class="img-thumbnail commentator" alt="Spectator">
+							<img src="/images/users/10.jpg" class="img-thumbnail commentator" alt="Spectator">
 						</a>
 				</div>
 
@@ -86,7 +86,7 @@
 
 				<div class="spectator-image">
 						<a href="#">
-							<img src="/images/svidetel.jpg" class="img-thumbnail commentator" alt="Spectator">
+							<img src="/images/users/9.jpg" class="img-thumbnail commentator" alt="Spectator">
 						</a>
 				</div>
 
@@ -102,7 +102,7 @@
 
 				<div class="spectator-image">
 						<a href="#">
-							<img src="/images/tupaja_elf.jpg" class="img-thumbnail commentator" alt="Spectator">
+							<img src="/images/users/4.jpg" class="img-thumbnail commentator" alt="Spectator">
 						</a>
 				</div>
 
