--- a/src/main/resources/templates/fragments/debatersChat.html
+++ b/src/main/resources/templates/fragments/debatersChat.html
@@ -32,7 +32,11 @@
 
 		<div class="container main-field">
 
-			<div class="resistance">
+			<div class="text-center">
+				<div>
+					<h3>До начала дебат осталось</h3>
+					<h3 th:id="demo"></h3>
+				</div>
 
 				<div class="container opponents">
 
@@ -77,9 +81,53 @@
 				<div class="table-of-votes">
 
 					<div id="firstPosition">0</div>
-					<div id="secondPosition">0</div>			
-				
+					<div id="secondPosition">0</div>
+
 				</div>
+
+				<!-- Обратный отсчет времени -->
+				<script>
+					// Set the date we're counting down to
+					var countDownDate = new Date("Jul 16, 2019 20:43:25")
+							.getTime();
+
+					// Update the count down every 1 second
+					var x = setInterval(
+							function() {
+
+								// Get todays date and time
+								var now = new Date().getTime();
+
+								// Find the distance between now an the count down date
+								var distance = countDownDate - now;
+
+								// Time calculations for days, hours, minutes and seconds
+								var days = Math.floor(distance
+										/ (1000 * 60 * 60 * 24));
+								var hours = Math
+										.floor((distance % (1000 * 60 * 60 * 24))
+												/ (1000 * 60 * 60));
+								var minutes = Math
+										.floor((distance % (1000 * 60 * 60))
+												/ (1000 * 60));
+								var seconds = Math
+										.floor((distance % (1000 * 60)) / 1000);
+
+								// Output the result in an element with id="demo"
+								document.getElementById("demo").innerHTML = days
+										+ "д "
+										+ hours
+										+ "ч "
+										+ minutes
+										+ "мин " + seconds + "с ";
+
+								// If the count down is over, write some text 
+								if (distance < 0) {
+									clearInterval(x);
+									document.getElementById("demo").innerHTML = "Дебаты начались";
+								}
+							}, 1000);
+				</script>
 
 			</div>
 
