--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -68,18 +68,14 @@
 
 
 			<div class="form-check form-check-inline">
-				<input class="form-check-input" type="radio"
-					name="userPosition" id="inlineRadio1" value="position1">
-				<label class="form-check-label" for="inlineRadio1">Левая
-					позиция          </label> <input class="form-check-input" type="radio"
-					name="userPosition" id="inlineRadio2" value="position2">
-				<label class="form-check-label" for="inlineRadio2">Правая
-					позиция</label>
+				<input class="form-check-input" type="radio" name="userPosition"
+					id="inlineRadio1" value="position1"> <label
+					class="form-check-label" for="inlineRadio1">Левая позиция </label>
+				<input class="form-check-input" type="radio" name="userPosition"
+					id="inlineRadio2" value="position2"> <label
+					class="form-check-label" for="inlineRadio2">Правая позиция</label>
 			</div>
-
-
-
-			<div id="image-holder"></div>
+			<p></p>
 			<div class="form-group">
 				<label for="name">Длительность дебатов (в минутах)</label> <input
 					type="range" name="generalTime" id="generalTime" min="5" step="5"
@@ -94,25 +90,28 @@
 				<output name="timeoutTimeOutput" id="timeoutTimeOutput">2</output>
 			</div>
 			<div class="form-group">
-				<label for="name">Штраф</label> <input type="range"
-					name="timeoutFine" id="timeoutFine" min="0" max="100" step="1"
-					value="0" oninput="timeoutFineOutput.value = timeoutFine.value" />
+				<label for="name" data-toggle="tooltip"
+					title="Штраф за несвоеременное предоставление аргумента">Штраф</label>
+				<input type="range" name="timeoutFine" id="timeoutFine" min="0"
+					max="100" step="1" value="0"
+					oninput="timeoutFineOutput.value = timeoutFine.value" />
 				<output name="timeoutFineOutput" id="timeoutFineOutput">0</output>
 			</div>
 			<div class="form-check">
-				<label class="form-check-label"> <input type="checkbox"
-					class="form-check-input" id="isCensorship" name="isCensorship">Цензура
-				</label> <small id="yearHelp" class="form-text text-muted">Возможно
-					ли использовать нецензурную лексику</small>
-
+				<label class="form-check-label" data-toggle="tooltip"
+					title="Возможно ли использовать нецензурную лексику"> <input
+					type="checkbox" class="form-check-input" id="isCensorship"
+					name="isCensorship">Цензура
+				</label>
 			</div>
+			<br>
 			<div class="form-check">
-				<label class="form-check-label"> <input type="checkbox"
-					class="form-check-input" id="isSpectatorChatVisible"
-					name="isSpectatorChatVisible">Видимость зрительского чата
-				</label> <small id="yearHelp" class="form-text text-muted">Видят ли
-					спикеры зрительский чат</small>
-
+				<label class="form-check-label" data-toggle="tooltip"
+					title="Видят ли спикеры зрительский чат"> <input
+					type="checkbox" class="form-check-input"
+					id="isSpectatorChatVisible" name="isSpectatorChatVisible">Видимость
+					зрительского чата
+				</label>
 			</div>
 
 
